--- a/hugo.toml
+++ b/hugo.toml
@@ -83,3 +83,8 @@ hasCJKLanguage = true
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
