--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@
 # Documentation: https://hugoblox.com/docs/
 
 # The URL the site will be built for
-baseURL = "https://hisazumi.github.io/"
+baseURL = "https://hisazumi.jp/"
 title = "Hisazumi Lab"
 
 # Theme
