docs: Update setup script and permissions for Hugo Extended installation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,5 @@
     }
   },
 
-  "postCreateCommand": "bash .devcontainer/setup.sh",
-
-  "remoteUser": "codespace"
+  "postCreateCommand": "bash .devcontainer/setup.sh"
 }
